js fixed arrow btn when invisible
make can't click when btn is invisible

--- a/style.css
+++ b/style.css
@@ -511,6 +511,13 @@ p {
 	font-size: var(--font-medium);
 	border-radius: 50%;
 	opacity: 0;
+	pointer-events: none;
+	transition: opacity var(--animation-duration) ease-in;
+}
+
+.arrow.visible {
+	opacity: 1;
+	pointer-events: auto;
 }
 
 @media screen and (max-width: 768px) {
